feat: enhance navigation and implement page content for Home, Menu, Booking, and Contact

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     </head>
     <body>
         <nav>
-            <a href="#/" data-link>Home</a>
-            <a href="#/menu" data-link>Menu</a>
-            <a href="#/booking" data-link>Booking</a>
-            <a href="#/contact" data-link>Contact</a>
+            <div class="navbarName">
+                <a href="#/">
+                    <h1>BR</h1>
+                </a>
+            </div>
+            <div class="navbarItem">
+                <a href="#/" data-link>Home</a>
+                <a href="#/menu" data-link>Menu</a>
+                <a href="#/booking" data-link>Booking</a>
+                <a href="#/contact" data-link>Contact</a>
+            </div>
         </nav>
         <div id="app"></div>
         <footer>
             <p>Tugas kelompok Pengembangan Web Sisi Klien</p>
         </footer>
-        <script src="./app.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
